home page and contact

--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -2501,7 +2501,7 @@ header.main-header .header-sticky.active{
 
 .page-header{
 	position: relative;
-	background: url('../images/page-header-bg.jpg') no-repeat center center;
+	background: url('../images/DJI_0248.jpg') no-repeat center center;
 	background-size: cover;
 	border-radius: 46px;
 	overflow: hidden;
@@ -2517,7 +2517,7 @@ header.main-header .header-sticky.active{
 	right: 0;
 	bottom: 0;
 	background: var(--primary-color);
-	opacity: 40%;
+	opacity: 60%;
 	z-index: 1;
 }
 
@@ -6564,7 +6564,7 @@ header.main-header .header-sticky.active{
 }
 
 .section-title h3 {
-    color: #FFFFFF;
+    color: #040401;
 }
 
 .footer-logo img{
