Recouvrements update value modal issue update

--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -2501,7 +2501,7 @@ header.main-header .header-sticky.active{
 
 .page-header{
 	position: relative;
-	background: url('../images/page-header-bg.jpg') no-repeat center center;
+	background: url('../images/DJI_0248.jpg') no-repeat center center;
 	background-size: cover;
 	border-radius: 46px;
 	overflow: hidden;
